# Raytracer

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_prod.sh  clean.sh  cover_scene.ins  example_scene.sf  generate_coverage.sh  raytracer.sh  release.sh  run_tests.sh
.circleci/: config.yml
src/: CMakeLists.txt  main.cpp
src/drawing/: canvas.h  colour.h  operations.h  operators.h
src/math/: constants.h  exceptions.h  matrix.h  operations.h  operators.h  point.h  tensor.h  transformations.h  utility.h  vector.h
src/objects/: cube.h  cylinder.h  light.h  object.h  plane.h  sphere.h
src/primitives/: base_material.h  constants.h  exceptions.h  intersection.h  intersection_container.h  material.h  operations.h  ray.h  referenceContainer.h
src/world/: camera.h  operations.h  world.h
tests/: CMakeLists.txt  matrix-test.cpp  operations-test.cpp  point-test.cpp  tensor-test.cpp  transformation-test.cpp  utility-test.cpp  vector-test.cpp
tests/math/: point-test.cpp  utility-test.cpp
tests/primitives/: base_material-test.cpp  intersection_container-test.cpp  light-test.cpp  operations-test.cpp  ray-test.cpp
tests/world/: operations-tests.cpp  world-test.cpp
